# AIBuddy

./: .env.example  pyproject.toml  start-aibuddy.bat  start-aibuddy.ps1
AI/: admin.py  ai_client.py  commands_processor.py  models.py  openai_service.py  serializers.py  services.py  urls.py  views.py
AI/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/: .env.example  .gitignore  README.md  RUN.md  pyproject.toml
backend/chats/: models.py  tests.py  views.py
backend/core/: settings.py  urls.py
backend/matching/: serializers.py  views.py
backend/templates/pages/: match.html
backend/user/: models.py  parsers.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0002_interestoption_remove_user_interests_interest.py  0003_alter_interestoption_name.py  0004_emailverificationcode.py
chat/: admin.py  api_serializers.py  api_urls.py  api_views.py  compat_views.py  models.py  serializers.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py
chat/services/: command_parser.py  openai_client.py  session_service.py  tutor_service.py
chats/: admin.py  serializers.py  services.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_chattopic.py
core/: settings.py  urls.py  views.py
frontend/: ReadMe.mr  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/vite-project/: vite.config.js
matching/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+10 files in other folders)
